--- a/recipe.html
+++ b/recipe.html
@@ -39,6 +39,19 @@
 					<li><strong>Cooking</strong>: 5 minutes</li>
 				</ul>
 			</section>
+
+			<section class="ingredents">
+				<h2>Ingredients</h2>
+				<ul>
+					<li>2-3 large eggs</li>
+					<li>Salt, to taste</li>
+					<li>Pepper, to taste</li>
+					<li>1 tablespoon of butter or oil</li>
+					<li>
+						Optional fillings: cheese, diced vegetables, cooked meats, herbs
+					</li>
+				</ul>
+			</section>
 		</main>
 
 		<!-- Bootstrap JavaScript Libraries -->
