--- a/recipe.html
+++ b/recipe.html
@@ -22,14 +22,16 @@
 	</head>
 
 	<body>
-		<main>
+		<main class="m-auto p-0 m-md-auto p-md-5">
 			<img src="/assets/images/image-omelette.jpeg" alt="Omellete" />
-			<h1>Simple Omelette Recipe</h1>
-			<p>
-				An easy and quick dish, perfect for any meal. This classic omelette
-				combines beaten eggs cooked to perfection, optionally filled with your
-				choice of cheese, vegetables, or meats.
-			</p>
+			<section>
+				<h1>Simple Omelette Recipe</h1>
+				<p>
+					An easy and quick dish, perfect for any meal. This classic omelette
+					combines beaten eggs cooked to perfection, optionally filled with your
+					choice of cheese, vegetables, or meats.
+				</p>
+			</section>
 
 			<section class="preparation">
 				<h3>Preparation time</h3>
@@ -51,6 +53,73 @@
 						Optional fillings: cheese, diced vegetables, cooked meats, herbs
 					</li>
 				</ul>
+			</section>
+
+			<section class="instruction">
+				<h2>Instruction</h2>
+
+				<ol>
+					<li>
+						<strong>Beat the eggs</strong>: In a bowl, beat the eggs with a
+						pinch of salt and pepper until they are well mixed. You can add a
+						tablespoon of water or milk for a fluffier texture.
+					</li>
+
+					<li>
+						<strong>Heat the pan</strong>: Place a non-stick frying pan over
+						medium heat and add butter or oil.
+					</li>
+
+					<li>
+						<strong>Cook the omelette</strong>: Once the butter is melted and
+						bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly
+						coat the surface.
+					</li>
+
+					<li>
+						<strong>Add fillings (optional)</strong>: When the eggs begin to set
+						at the edges but are still slightly runny in the middle, sprinkle
+						your chosen fillings over one half of the omelette.
+					</li>
+
+					<li>
+						<strong>Fold and serve</strong>: As the omelette continues to cook,
+						carefully lift one edge and fold it over the fillings. Let it cook
+						for another minute, then slide it onto a plate.
+					</li>
+
+					<li>
+						<strong>Enjoy</strong>: Serve hot, with additional salt and pepper
+						if needed.
+					</li>
+				</ol>
+			</section>
+			<section class="nutrition">
+				<h2>Nutrition</h2>
+				<p>
+					The table below shows nutritional values per serving without the
+					additional fillings.
+				</p>
+				<table>
+					<tbody>
+						<tr>
+							<td>Calories</td>
+							<td><b>277kcal</b></td>
+						</tr>
+						<tr>
+							<td>Carbs</td>
+							<td><b>0g</b></td>
+						</tr>
+						<tr>
+							<td>Protein</td>
+							<td><b>20g</b></td>
+						</tr>
+						<tr>
+							<td>Fat</td>
+							<td><b>22g</b></td>
+						</tr>
+					</tbody>
+				</table>
 			</section>
 		</main>
 
