--- a/index.html
+++ b/index.html
@@ -1,77 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<link rel="icon" type="image/png" href="/assets/images/favicon-32x32.png" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Recipe page</title>
+		<title>Frontend Mentor | Recipe page</title>
+		<!-- Required meta tags -->
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+		<!-- Bootstrap CSS v5.2.1 -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="/style.css" />
+	</head>
 
-  Simple Omelette Recipe
+	<body>
+		<main class="m-auto p-0 m-md-auto p-md-5">
+			<img src="/assets/images/image-omelette.jpeg" alt="Omellete" />
+			<section>
+				<h1>Simple Omelette Recipe</h1>
+				<p>
+					An easy and quick dish, perfect for any meal. This classic omelette
+					combines beaten eggs cooked to perfection, optionally filled with your
+					choice of cheese, vegetables, or meats.
+				</p>
+			</section>
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+			<section class="preparation">
+				<h3>Preparation time</h3>
+				<ul>
+					<li><strong>Total</strong>: Approximately 10 minutes</li>
+					<li><strong>Preparation</strong>: 5 minutes</li>
+					<li><strong>Cooking</strong>: 5 minutes</li>
+				</ul>
+			</section>
 
-  Preparation time
+			<section class="ingredents">
+				<h2>Ingredients</h2>
+				<ul>
+					<li>2-3 large eggs</li>
+					<li>Salt, to taste</li>
+					<li>Pepper, to taste</li>
+					<li>1 tablespoon of butter or oil</li>
+					<li>
+						Optional fillings: cheese, diced vegetables, cooked meats, herbs
+					</li>
+				</ul>
+			</section>
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
+			<section class="instruction">
+				<h2>Instruction</h2>
 
-  Ingredients
+				<ol>
+					<li>
+						<strong>Beat the eggs</strong>: In a bowl, beat the eggs with a
+						pinch of salt and pepper until they are well mixed. You can add a
+						tablespoon of water or milk for a fluffier texture.
+					</li>
 
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
+					<li>
+						<strong>Heat the pan</strong>: Place a non-stick frying pan over
+						medium heat and add butter or oil.
+					</li>
 
-  Instructions
+					<li>
+						<strong>Cook the omelette</strong>: Once the butter is melted and
+						bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly
+						coat the surface.
+					</li>
 
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
+					<li>
+						<strong>Add fillings (optional)</strong>: When the eggs begin to set
+						at the edges but are still slightly runny in the middle, sprinkle
+						your chosen fillings over one half of the omelette.
+					</li>
 
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
+					<li>
+						<strong>Fold and serve</strong>: As the omelette continues to cook,
+						carefully lift one edge and fold it over the fillings. Let it cook
+						for another minute, then slide it onto a plate.
+					</li>
 
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
+					<li>
+						<strong>Enjoy</strong>: Serve hot, with additional salt and pepper
+						if needed.
+					</li>
+				</ol>
+			</section>
+			<section class="nutrition">
+				<h2>Nutrition</h2>
+				<p>
+					The table below shows nutritional values per serving without the
+					additional fillings.
+				</p>
+				<table>
+					<tbody>
+						<tr>
+							<td>Calories</td>
+							<td><b>277kcal</b></td>
+						</tr>
+						<tr>
+							<td>Carbs</td>
+							<td><b>0g</b></td>
+						</tr>
+						<tr>
+							<td>Protein</td>
+							<td><b>20g</b></td>
+						</tr>
+						<tr>
+							<td>Fat</td>
+							<td><b>22g</b></td>
+						</tr>
+					</tbody>
+				</table>
+			</section>
+		</main>
 
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
+		<!-- Bootstrap JavaScript Libraries -->
+		<script
+			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+			integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+			crossorigin="anonymous"
+		></script>
 
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
-
-  Enjoy: Serve hot, with additional salt and pepper if needed.
-
-  Nutrition
-
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+			integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
