recheck the sources

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="icon" type="image/png" href="/assets/images/favicon-32x32.png" />
+		<link rel="icon" type="image/png" href="favicon-32x32.png" />
 
 		<title>Frontend Mentor | Recipe page</title>
 		<!-- Required meta tags -->
@@ -23,7 +23,7 @@
 
 	<body>
 		<main class="m-auto p-0 m-md-auto p-md-5">
-			<img src="/assets/images/image-omelette.jpeg" alt="Omellete" />
+			<img src="image-omelette.jpeg" alt="Omellete" />
 			<section>
 				<h1>Simple Omelette Recipe</h1>
 				<p>
